# ushio

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
.sqlx/: query-0adf88935508ce7ab0249d311b63e6ae47385ff95aa7f847c85c249e09ce9235.json  query-0e31d4b90ee6195f340c3841a05717049075b70d74529b2a812ffc8d6ca80759.json  query-10f54b8b09382530ac6dc92fcdf5cd9c91db205843f13c65ca4e88d074aca912.json  query-429fbee5af59816b0251a1aea83c044d869f865edabc3c07cb3bdfc4783b6c04.json
migrations/: 20260531161123_initial.down.sql  20260531161123_initial.up.sql  20260608122933_adjust_indexes.down.sql  20260608122933_adjust_indexes.up.sql
src/: main.rs  state.rs
src/api/: mod.rs
src/database/: impls.rs  mod.rs  models.rs
