[package]
name = "ushio"
version = "0.1.0"
edition = "2024"

[dependencies]
apply = "0.3.0"
axum = "0.8.9"
axum-prometheus = "0.10.0"
bigdecimal = "0.4.10"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
futures = "0.3.32"
metrics = "0.24.6"
rosu-mods = { version = "0.4.1", features = ["serde"] }
rosu-v2 = { version = "0.11.0", features = ["serialize"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "derive", "postgres", "macros", "time"] }
time = { version = "0.3.47", features = ["serde"] }
tokio = "1.52.3"
tokio-tungstenite = { version = "0.29.0", features = ["rustls", "rustls-tls-native-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
